Functional Email and added friend requests to user