@@ -7,6 +7,8 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ClassPathResource;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -28,17 +30,17 @@ class UserImageManagerTest {
 	 */
 	@Test
 	void saveImageTest() {
-		Path resourceDirectory = Paths.get("src","main","resources", "testImages");
+		Path resourceDirectory = Paths.get("src","main","resources", "testImages","testImage.jpg");
 		String absolutePath = resourceDirectory.toFile().getAbsolutePath();
 		MultipartFile multipartFile = null;
 		try {
-			multipartFile = new MockMultipartFile(System.currentTimeMillis()+".jpg", new FileInputStream(new File(absolutePath+"/testImage.jpg")));	
+			multipartFile = new MockMultipartFile(System.currentTimeMillis()+".jpg", new FileInputStream(new File(absolutePath)));	
 		} catch (FileNotFoundException e) {
 			e.printStackTrace();
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
-		assertNotNull(UserImageManager.saveImage(multipartFile));
+	    assertNotNull(UserImageManager.saveImage(multipartFile));
 	}
 	@Test
 	void failedSavingImageTest() {
@@ -57,9 +59,10 @@ class UserImageManagerTest {
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
-		String imageAbsolutePath=UserImageManager.saveImage(multipartFile);
-		Path pathImageToDelete = Path.of(imageAbsolutePath);
-		assertTrue(UserImageManager.deleteImage(pathImageToDelete));
+		String imagePath=UserImageManager.saveImage(multipartFile);
+		System.out.println(imagePath.toString());
+		resourceDirectory = Paths.get("src","main","resources", "images",imagePath);		
+		assertTrue(UserImageManager.deleteImage(resourceDirectory));
 	}
 	@Test
 	void deleteNotExistingImageTest() {
